kleine Korrekturen, Typos etc.

--- a/0a_Abschlussbericht/src/frequenzbereich.tex
+++ b/0a_Abschlussbericht/src/frequenzbereich.tex
@@ -1,8 +1,10 @@
 \chapter{Systemidentifikation im Frequenzbereich}
-Neben der Systemidentifikation im Zeitbereich ist es möglich die Parameterschätzung auch im Frequenzbereich durchzuführen. 
+Neben der Systemidentifikation im Zeitbereich ist es auch möglich, die 
+Parameterschätzung im Frequenzbereich durchzuführen. 
 Die Analyse im Frequenzbereich bringt einige Vorteile mit sich, die im weiteren Verlauf dieser Dokumentation genauer 
 beleuchtet werden.  Ausgehend von den Fourier-transformierten Messwerten wird im Folgenden genauer auf die Idee der 
-\textit{Output Error}-Methode und auf den Algorithmus zur Lösung des Schätzproblems eingegangen. Zum Schluss werden die 
+\textit{Output Error}-Methode und auf einen Algorithmus zur Lösung des 
+Schätzproblems eingegangen. Zum Schluss werden die 
 Ergebnisse  bewertet und der Blick auf mögliche Verbesserungen und andere Methoden gerichtet.
 
 
