--- a/0a_Abschlussbericht/src/appendix_test_algorithmus.tex
+++ b/0a_Abschlussbericht/src/appendix_test_algorithmus.tex
@@ -2,7 +2,9 @@
 
 Zum Test der \textit{Output Error}-Methode mit dem \textit{Newton-Raphson}-Algorithmus wurde ein sinusförmiges Signal 
 mit einer bestimmten Frequenz in der Höhenruderstuerung sowie ein Sinus-Signal im Anstellwinkel erstellt und der Algorithmus 
-verwendet, um die entsprechende Über-tragung zu identifizieren. Wie sich in 
+verwendet, um die entsprechende Über-tragung zu identifizieren. Mit der 
+identifizierten Übertragunsgfunktion wurde dann eine Näherung des 
+Zustandsverlaufs berechnet. Wie sich in 
 \cref{fig:testdaten1} erkennen lässt, wird die 
 ursprüngliche Frequenz gut angenähert. Der Anstellwinkelverlauf wird vom Algorithmus mit einem leichten Phasenversatz noch 
 gut getroffen (vgl. \cref{fig:testdaten2}).\par
