--- a/0a_Abschlussbericht/src/bibfile.bib
+++ b/0a_Abschlussbericht/src/bibfile.bib
@@ -11,14 +11,16 @@
 % überarbeiten!
 @booklet{Fichter2009,
   title = {Flugmechanik},
-  institution = {Universität Stuttgart, Institut für Flugmechanik und Flugregelung},
+  publisher = {Universität Stuttgart, Institut für Flugmechanik und 
+  Flugregelung},
   year = {2009},
   author = {Walter Fichter and Werner Grimm}
 }
 
 @booklet{Grimm2017,
 	title = {Skriptum Digitale Regelung und Filterung},
-	institution = {Universität Stuttgart, Institut für Flugmechanik und Flugregelung},
+	publisher = {Institut für Flugmechanik und Flugregelung, Universität 
+	Stuttgart},
 	year = {2017},
 	author = {Werner Grimm}
 }
@@ -48,16 +50,18 @@
 	isbn = {0-471-04000-2}
 }
 
-@booklet{Mandry2021,
+@book{Mandry2021,
 	title = {Modul 5: Kleinste Fehlerquadrate für eine Matrixgleichung: Matrix-LSQ},
-	institution = {Universität Stuttgart, Institut für Flugmechanik und Flugregelung},
+	publisher = {Institut für Flugmechanik und Flugregelung, Universität 
+	Stuttgart},
 	year = {2021},
 	author = {Nicolas Mandry}
 }
 
-@booklet{Gschwandtner2019,
+@book{Gschwandtner2019,
 	title = {Bestimmung eines Pilotenmodells mit Flugmessdaten aus einem UL-Helikopter},
-	institution = {Universität Stuttgart, Institut für Flugmechanik und Flugregelung},
+	publisher = {Institut für Flugmechanik und Flugregelung, Universität 
+	Stuttgart},
 	year = {2019},
 	author = {Florian Gschwandtner}
 }
