--- a/0a_Abschlussbericht/src/vorbereitung.tex
+++ b/0a_Abschlussbericht/src/vorbereitung.tex
@@ -98,21 +98,11 @@ Eine Ausnahme bilden hier die Drehraten $ p $, $ q $ und $ r $, bei denen keine 
 
 \section{Interpolation} \label{sec:interp} %Florian
 
-Die Rohdaten werden von mehreren Sensoren mit unterschiedlichen Abtastraten 
-geliefert. Da die Identifikationsalgorithmen die Werte zu diskreten Zeitpunkten 
-benötigen, ist es notwendig, einen einheitlichen Zeitvektor mit zugehörigen 
-Eingangs- und Zustandsvektoren zu generieren. Außerdem wird eine konstante 
-Schrittweite gefordert.
+Die Rohdaten werden von mehreren Sensoren mit unterschiedlichen Abtastraten geliefert. Da die Identifikationsalgorithmen die Werte zu diskreten Zeitpunkten benötigen ist es notwendig einen einheitlichen Zeitvektor mit zugehörigen Eingangs- und Zustandsvektoren zu generieren. Außerdem wird eine konstante Schrittweite gefordert.
 
-Die Abtastrate dieses Zeitvektors ist wichtig, da die Dimension des 
-Optimierungsproblems und damit der Rechenaufwand mit feinerer Diskretisierung 
-steigt. In dieser Arbeit wird der Zeitvektor des Sensors in 
-\textit{vectoflow\_airdata} verwendet, da dieser die geringste Abstastrate hat.
+Die Abtastrate dieses Zeitvektors ist wichtig, da die Dimension des Optimierungsproblems und damit der Rechenaufwand mit feinerer Diskretisierung steigt. In dieser Arbeit wird der Zeitvektor des \textit{vectoflow\_airdata} Sensors verwendet, da dieser die geringste Abstastrate hat.
 
-In \cref{fig:interpBsp} ist deutlich zu sehen, dass die wesentliche Form des 
-Signals erhalten bleibt. Die Frequenzen beider Sensoren sind so hoch, dass auch 
-im interpolierten Verlauf alle relevanten Signalanteile erhalten bleiben und 
-nur Rauschen verloren geht.
+In Abb. \ref{fig:interpBsp} ist deutlich zu sehen, dass die wesentliche Form des Signals erhalten bleibt. Die Frequenzen beider Sensoren sind so hoch, dass auch im interpolierten Verlauf alle relevanten Signalanteile erhalten bleiben und nur Rauschen verloren geht.
 
 
 \begin{figure}[h!]
@@ -133,9 +123,7 @@ Daten liefern in vielen Fällen keine sinnvolle Aussage. Neben aufwändigeren Ab
 Filterung der Daten an.\par
 Das Vorwärts-Rückwärtsfilter bietet den Vorteil, dass keine Phasenverschiebung auftritt. Gerade wenn nur einzelne Signalteile 
 gefiltert werden, beispielsweise nur der Eingang, ist diese Eigenschaft unerlässlich. Der Nachteil ist, dass das Filter nicht 
-in Echtzeit verwendet werden kann, da immer die vollständige Datenreihe 
-vorliegen muss. Für eine Systemidentifikation ist dies jedoch keine praktische 
-Einschränkung. \cite{Gschwandtner2019}
+in Echtzeit verwendet werden kann, da immer die vollständige Datenreihe vorliegen muss. Für eine Systemidentifikation ist dies jedoch keine praktische Einschränkung. \cite{Gschwandtner2019}
 
 In \cref{fig:filterBsp} sind die Auswirkungen einer reinen Vorwärts- und einer Vorwärts-Rückwärtsfilterung auf die Phase 
 gut zu sehen.
