--- a/0a_Abschlussbericht/src/bibfile.bib
+++ b/0a_Abschlussbericht/src/bibfile.bib
@@ -11,16 +11,14 @@
 % überarbeiten!
 @booklet{Fichter2009,
   title = {Flugmechanik},
-  publisher = {Universität Stuttgart, Institut für Flugmechanik und 
-  Flugregelung},
+  institution = {Universität Stuttgart, Institut für Flugmechanik und Flugregelung},
   year = {2009},
   author = {Walter Fichter and Werner Grimm}
 }
 
 @booklet{Grimm2017,
 	title = {Skriptum Digitale Regelung und Filterung},
-	publisher = {Institut für Flugmechanik und Flugregelung, Universität 
-	Stuttgart},
+	institution = {Universität Stuttgart, Institut für Flugmechanik und Flugregelung},
 	year = {2017},
 	author = {Werner Grimm}
 }
@@ -50,18 +48,16 @@
 	isbn = {0-471-04000-2}
 }
 
-@book{Mandry2021,
+@booklet{Mandry2021,
 	title = {Modul 5: Kleinste Fehlerquadrate für eine Matrixgleichung: Matrix-LSQ},
-	publisher = {Institut für Flugmechanik und Flugregelung, Universität 
-	Stuttgart},
+	institution = {Universität Stuttgart, Institut für Flugmechanik und Flugregelung},
 	year = {2021},
 	author = {Nicolas Mandry}
 }
 
-@book{Gschwandtner2019,
+@booklet{Gschwandtner2019,
 	title = {Bestimmung eines Pilotenmodells mit Flugmessdaten aus einem UL-Helikopter},
-	publisher = {Institut für Flugmechanik und Flugregelung, Universität 
-	Stuttgart},
+	institution = {Universität Stuttgart, Institut für Flugmechanik und Flugregelung},
 	year = {2019},
 	author = {Florian Gschwandtner}
 }
