Header auf Titelseite eingefügt

--- a/0a_Abschlussbericht/src/00_title.tex
+++ b/0a_Abschlussbericht/src/00_title.tex
@@ -2,7 +2,12 @@
 % Titelseite
 %********************************
 \section*{
-\thispagestyle{empty}
+\pagenumbering{gobble}
+\ohead{  \normalfont \sffamily \bfseries \small Universität Stuttgart \\[2pt] 
+Institut für Flugmechanik und Flugregelung  \\[8pt] 
+\normalfont\sffamily\footnotesize{Prof. Dr.-Ing. Walter Fichter}\\[-37pt] }
+\lohead{ \includegraphics[scale=0.4, trim= -0.0cm 0.05cm 0cm 0cm] 
+{./src/pics/logo/ifrlogo.pdf} \vspace{0.05cm}}
 \vspace{4.5cm}
 {\LARGE \\ 
 Aerobotics-Seminar  \\
