--- a/0a_Abschlussbericht/Main.tex
+++ b/0a_Abschlussbericht/Main.tex
@@ -89,7 +89,7 @@
 
 %Table of contents
 \tableofcontents
-%\pagenumbering{arabic} 
+\pagenumbering{arabic} 
 
 %Chapters
 \input{./src/einleitung.tex}
