--- a/0a_Abschlussbericht/src/zeitbereich.tex
+++ b/0a_Abschlussbericht/src/zeitbereich.tex
@@ -101,7 +101,8 @@ Die einzelnen Vektoren und Matrizen lauten:
 	M_{\eta}\;
 	M_{\delta_F})^T \\
 \end{equation}  
-Wie schon in dem letzten Abschnitt erwähnt, wird es nach einem geschätzten Paramertervektor $\mathbf{\hat{x}}$ gesucht, der 
+Wie schon in dem letzten Abschnitt erwähnt, wird es nach einem geschätzten 
+Parametervektor $\mathbf{\hat{x}}$ gesucht, der 
 die Norm des quadrierten Restfehlervektors $ \mathbf{e} = \mathbf{z} - \mathbf{H}\cdot \mathbf{\hat{x}}$ minimiert. Die 
 Lösung ist laut \cref{eq:minProblemLoesung}
 \begin{equation}
